img size modified

--- a/src/style.css
+++ b/src/style.css
@@ -506,8 +506,9 @@ button:focus {
 
 .card-img-top {
   padding: 20px !important;
-  opacity: 0.8 !important;
   border-radius: 10px !important;
+  height: 350px;
+  object-fit: contain;
 }
 
 .blog-img {
