github button modified

--- a/src/style.css
+++ b/src/style.css
@@ -536,7 +536,9 @@ button:focus {
   overflow: hidden !important;
   box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
 }
-
+.gitHubButton {
+  border-radius: 50%;
+}
 .blog-card {
   padding-top: 50px !important;
   padding-bottom: 50px !important;
