github button modified

--- a/src/style.css
+++ b/src/style.css
@@ -537,7 +537,7 @@ button:focus {
   box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
 }
 .gitHubButton {
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 .blog-card {
   padding-top: 50px !important;
